--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/fira-sans": "^5.0.19",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.5.12",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.12"
   }
 }
